# rust-cloudrun

./: .gitignore  .gitpod.yml  Cargo.toml  Dockerfile  README.md
.github/workflows/: cloud-run.preview.yml
client/: Cargo.toml  build.rs  out.txt
client/src/: lib.rs  main.rs
client_build/: Cargo.toml
client_build/src/: main.rs
fauna_test/: Cargo.toml
fauna_test/src/: main.rs
server/: Cargo.toml  build.rs
server/src/: main.rs
sha256-const/: Cargo.toml
sha256-const/src/: lib.rs
src/: main.rs
static_macro/: Cargo.toml
static_macro/src/: lib.rs
static_macro2/: Cargo.toml
static_macro2/src/: lib.rs
