[package]
name = "rust-cloudrun"
version = "0.1.0"
edition = "2021"
authors = ["narumincho"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0-rc.2", features = ["full"] }
tokio = { version = "1.24.0", features = ["full"] }
http = "0.2.8"
http-body-util = "0.1.0-rc.1"
uuid = { version = "1.2.2", features = ["v4"] }
chrono = "0.4.23"
sha256-const = {path = "./sha256-const" }
