[package]
name = "fauna_test"
version = "0.1.0"
edition = "2021"
authors = ["narumincho"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "2.3.2"
async-std = {version="1.12.0", features = ["attributes"]}
http-types = "2.12.0"
serde = "1.0.152"
serde_json = "1.0.91"
