[package]
name = "fauna_test"
version = "0.1.0"
edition = "2021"
authors = ["narumincho"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
http-types = "2.12.0"
serde = "1.0.217"
serde_json = "1.0.134"
anyhow = "1.0.95"
execute = "0.2.13"
reqwest = { version = "0.11.27", features = ["json"] }
