[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["narumincho"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1.27.0", features = ["full"] }
http = "0.2.9"
http-body-util = "0.1.0-rc.2"
uuid = { version = "1.3.0", features = ["v4"] }
chrono = "0.4.24"
static_macro = { path = "../static_macro" }
const_format = "0.2.30"
sha2 = "0.10.6"
once_cell = "1.17.1"
