[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["narumincho"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.5.2", features = ["full"] }
tokio = { version = "1.42.0", features = ["full"] }
http = "0.2.12"
http-body-util = "0.1.2"
uuid = { version = "1.11.0", features = ["v4"] }
chrono = "0.4.39"
static_macro = { path = "../static_macro" }
const_format = "0.2.34"
sha2 = "0.10.8"
once_cell = "1.20.2"
